fix: winner style was not around the pile visible only when user has a long name or sleepy icon was shown

--- a/dobble.css
+++ b/dobble.css
@@ -99,6 +99,10 @@ html {
   display: block !important;
 }
 
+.playerHand{
+  align-self: center;
+}
+
 .circularLayout .pile-description,
 .circularPattern .pile-description {
   justify-content: space-evenly;
